# Ghost

./: .gitignore  .gitmodules  README.md  ReadmeCN.md  how_many_code_I_have_programmed.py
Ghost/App/: App.c  App.h  CMakeLists.txt  Ghost.c  GhostSoftwareErrorDefine.h  Readme.md
Ghost/App/Components/AppFramework/: CMakeLists.txt  GhostAppFramework.c  GhostAppFramework.h  GhostAppResourcePool.c  GhostAppResourcePool.h  ReadmeCN.md
Ghost/App/Components/AppFramework/AppAPIs/: GhostAppAPIs.c  GhostAppAPIs.h
Ghost/App/Components/AppFramework/AppAPIs/FileSystem/: GhostFileSystemAppAPIs.c  GhostFileSystemAppAPIs.h
Ghost/App/Components/AppFramework/AppAPIs/lvgl/: lvglAppAPIs.c  lvglAppAPIs.h
Ghost/App/Components/ApplicationManager/: CMakeLists.txt  GhostApplicationManager.c  GhostApplicationManager.h  Readme.md
Ghost/App/Components/Log/: CMakeLists.txt  GhostLog.c  GhostLog.h  Readme.md
Ghost/App/Components/SafeLVGL/: CMakeLists.txt  GhostSafeLVGL.c  GhostSafeLVGL.h  Readme.md  convert_lvgl_to_safe_lvgl.py  safe_lv_conf_template.c  safe_lv_conf_template.h  safe_lvgl.c  safe_lvgl.h
Ghost/App/Components/SafeLVGL/demos/: safe_lv_demos.c  safe_lv_demos.h
Ghost/App/Components/SafeLVGL/demos/benchmark/: safe_lv_demo_benchmark.c  safe_lv_demo_benchmark.h
Ghost/App/Components/SafeLVGL/demos/keypad_encoder/: safe_lv_demo_keypad_encoder.c  safe_lv_demo_keypad_encoder.h
Ghost/App/Components/SafeLVGL/demos/music/: safe_lv_demo_music.c  safe_lv_demo_music.h  safe_lv_demo_music_list.c  safe_lv_demo_music_list.h  safe_lv_demo_music_main.c  safe_lv_demo_music_main.h
Ghost/App/Components/SafeLVGL/demos/stress/: safe_lv_demo_stress.c  safe_lv_demo_stress.h
Ghost/App/Components/SafeLVGL/demos/widgets/: safe_lv_demo_widgets.c  safe_lv_demo_widgets.h
Ghost/App/Components/SafeLVGL/env_support/cmsis-pack/: safe_lv_conf_cmsis.c  safe_lv_conf_cmsis.h
Ghost/App/Components/SafeLVGL/env_support/rt-thread/: safe_lv_rt_thread_conf.c  safe_lv_rt_thread_conf.h
Ghost/App/Components/SafeLVGL/examples/: safe_lv_examples.c  safe_lv_examples.h
Ghost/App/Components/SafeLVGL/examples/anim/: safe_lv_example_anim.c  safe_lv_example_anim.h
Ghost/App/Components/SafeLVGL/examples/event/: safe_lv_example_event.c  safe_lv_example_event.h
Ghost/App/Components/SafeLVGL/examples/get_started/: safe_lv_example_get_started.c  safe_lv_example_get_started.h
Ghost/App/Components/SafeLVGL/examples/layouts/: safe_lv_example_layout.c  safe_lv_example_layout.h
Ghost/App/Components/SafeLVGL/examples/libs/: safe_lv_example_libs.c  safe_lv_example_libs.h
Ghost/App/Components/SafeLVGL/examples/others/: safe_lv_example_others.c  safe_lv_example_others.h
Ghost/App/Components/SafeLVGL/examples/porting/: safe_lv_port_disp_template.c  safe_lv_port_disp_template.h  safe_lv_port_fs_template.c  safe_lv_port_fs_template.h  safe_lv_port_indev_template.c  safe_lv_port_indev_template.h
Ghost/App/Components/SafeLVGL/examples/scroll/: safe_lv_example_scroll.c  safe_lv_example_scroll.h
Ghost/App/Components/SafeLVGL/examples/styles/: safe_lv_example_style.c  safe_lv_example_style.h
Ghost/App/Components/SafeLVGL/examples/widgets/: safe_lv_example_widgets.c  safe_lv_example_widgets.h
Ghost/App/Components/SafeLVGL/src/: safe_lv_api_map.c  safe_lv_api_map.h  safe_lv_conf_internal.c  safe_lv_conf_internal.h  safe_lv_conf_kconfig.c  safe_lv_conf_kconfig.h
Ghost/App/Components/SafeLVGL/src/core/: safe_lv_disp.c  safe_lv_disp.h  safe_lv_event.c  safe_lv_event.h  safe_lv_group.c  safe_lv_group.h  safe_lv_indev.c  safe_lv_indev.h  safe_lv_indev_scroll.c  safe_lv_indev_scroll.h  safe_lv_obj.c  safe_lv_obj.h  safe_lv_obj_class.c  safe_lv_obj_class.h  safe_lv_obj_draw.c  safe_lv_obj_draw.h  safe_lv_obj_pos.c  safe_lv_obj_pos.h  safe_lv_obj_scroll.c  safe_lv_obj_scroll.h  safe_lv_obj_style.c  safe_lv_obj_style.h  safe_lv_obj_style_gen.c  safe_lv_obj_style_gen.h  safe_lv_obj_tree.c  safe_lv_obj_tree.h  safe_lv_refr.c  safe_lv_refr.h  safe_lv_theme.c  safe_lv_theme.h
Ghost/App/Components/SafeLVGL/src/draw/: safe_lv_draw.c  safe_lv_draw.h  safe_lv_draw_arc.c  safe_lv_draw_arc.h  safe_lv_draw_img.c  safe_lv_draw_img.h  safe_lv_draw_label.c  (+19 more)
Ghost/App/Components/ThemeManager/: CMakeLists.txt  GhostThemeManager.h  Readme.md
Ghost/App/Components/ThemeManager/Themes/: CMakeLists.txt
Ghost/App/Components/safe_lvgl/: CMakeLists.txt  safe_lvgl.c  safe_lvgl.h
Ghost/App/NativeApplications/ApplicationManager/: CMakeLists.txt  GhostApplicationManager.c  GhostApplicationManager.h  Readme.md  ReadmeCN.md
Ghost/App/NativeApplications/Calculator/: CMakeLists.txt  GhostCalculator.c  GhostCalculator.h
Ghost/App/NativeApplications/Launcher/: CMakeLists.txt  GhostLauncher.c  GhostLauncher.h  Readme.md
Ghost/App/NativeApplications/PermissionManager/: CMakeLists.txt  GhostPermissionManager.c  GhostPermissionManager.h  Readme.md
Ghost/App/NativeApplications/ThemeManager/: CMakeLists.txt  GhostThemeManager.c  GhostThemeManager.h  ReadmeCN.md  ReadmeCN_.md
Ghost/App/NativeApplications/ThemeManager/Components/: GhostThemeHandle.c  GhostThemeHandle.h
Ghost/App/NativeApplications/ThemeManager/Themes/: GhostAppleInfograph.c  GhostAppleInfograph.h  GhostAppleLike.c  GhostAppleLike.h  GhostBigWhite.h  GhostTheme.h
Ghost/Drivers/Clock/StandardClock/: CMakeLists.txt  GhostStandardClock.cpp  StandardClock.cpp
Ghost/Drivers/FileSystem/: CMakeLists.txt  GhostFileSystem.c  GhostFileSystem.h  Readme.md
Ghost/Drivers/Log/: CMakeLists.txt  GhostLog.c  GhostLog.h
Ghost/Drivers/MemoryManager/: CMakeLists.txt  GhostMemoryManager.c  GhostMemoryManager.h
Ghost/Drivers/Screen/: CMakeLists.txt  GhostScreen.h
Ghost/Drivers/Screen/QT_GraphicsView/: CMakeLists.txt  QT_GraphicsView.c  QT_GraphicsView.h
Ghost/Drivers/Screen/QT_SimulatorScreen/: CMakeLists.txt  QT_SimulatorScreen.c
Ghost/Drivers/Screen/QtSimulatorScreen/: CMakeLists.txt  QtSimulatorScreen.c  QtSimulatorScreen.h
Ghost/Drivers/Thread/pthread/: CMakeLists.txt  GhostThread.c  GhostThread.h
Ghost/Drivers/TouchScreen/QtSimulatorTouchScreen/: CMakeLists.txt  QtSimulatorTouchScreen.c
(+308 files in other folders)
